Fix layout and function on IE8

--- a/public/less/hcard.less
+++ b/public/less/hcard.less
@@ -166,6 +166,7 @@ body {
 			width: 100%;
 			.box-sizing();
 			height: 35px;
+			line-height: 35px;
 			font-family: 'Merriweather', serif;
 			font-size: 16px;
 			color: #000000;
@@ -174,6 +175,7 @@ body {
 			margin-bottom: 0;
 		}
 		button {
+			display: block;
 			width: 190px;
 			height: 42px;
 			.border-radius();
